--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to left, #8f94fb, #4e54c8);
+    background: linear-gradient(to left, #504c4c, #030307);
     overflow: hidden;
     z-index: -1; /* Background layer */
 }
