--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -150,7 +150,7 @@ body {
 }
 
 .wave {
-    background: url(../assets/wave.svg) repeat-x;
+    background: url(../../assets/wave.svg) repeat-x;
     position: absolute;
     width: 6400px;
     top: -198px;
