--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -25,7 +25,7 @@ body {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to left, #2c0845, #030307);
+    background: linear-gradient(to left, #350135, #000000);
     overflow: hidden;
     z-index: -1; /* Background layer */
 }
